Prevented H1 word-wrap text collisions

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ h1 {
 	color: #fff;
 	font-weight: 600;
 	font-size: 4em;
+	white-space: nowrap;
 }
 
 body {
